# clippy-macros-bug

./: Cargo.toml  Readme.md
marshalable/: Cargo.toml
marshalable-derive/: Cargo.toml
marshalable-derive/src/: lib.rs
marshalable/src/: lib.rs
